--- a/app/package.json
+++ b/app/package.json
@@ -2,7 +2,8 @@
   "name": "discord-starter",
   "version": "1.0.0",
   "engines": {
-    "node": "12.x"
+    "node": "12.19.0"
+     "npm": "6.14.8"
   },
   "description": "",
   "main": "index.js",
