--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "discord-starter",
   "version": "1.0.0",
   "engines": {
-    "node": "12.x"
+    "node": "12.19.0"
   },
   "description": "",
   "main": "index.js",
